--- a/foundry.toml
+++ b/foundry.toml
@@ -51,7 +51,7 @@ mainnet = { key = "${ETHERSCAN_API_KEY_MAINNET}", chainId = 1 }
 optimism = { key = "${ETHERSCAN_API_KEY_OPTIMISM}", chainId = 10 }
 avalanche = { key = "${ETHERSCAN_API_KEY_AVALANCHE}", chainId = 43114 }
 polygon = { key = "${ETHERSCAN_API_KEY_POLYGON}", chainId = 137 }
-arbitrum = { key = "${ETHERSCAN_API_KEY_ARBITRUM}", chainId = 42161 }
+arbitrum = { key = "${ARBISCAN_API_KEY}", chainId = 42164 }
 # fantom = { key = "${ETHERSCAN_API_KEY_FANTOM}", chainId = 250 }
 scroll = { key = "${ETHERSCAN_API_KEY_SCROLL}", chainId = 534352, url = 'https://api.scrollscan.com/api\?' }
 # celo = { key = "${ETHERSCAN_API_KEY_CELO}", chainId = 42220 }
